--- a/index.html
+++ b/index.html
@@ -8,20 +8,38 @@
 
     <body>
       <Script>
-      var searchValue = 30;
+      var searchValue = 49;
       var searchArray = [
         2, 6, 8, 10, 13, 15, 24, 25, 26, 27, 28, 29,
-        30, 32, 33, 34, 35, 37, 41, 23, 44, 49, 45, 53, 55,
+        30, 32, 33, 34, 35, 37, 41, 43, 44, 45, 49, 53, 55,
         58, 60, 61, 62, 64, 66, 69, 71, 77, 83, 84, 95, 103,
-        213, 215, 217, 221, 225, 227, 229,231, 235, 512, 546, 555
+        213, 215, 217, 221, 225, 227, 229,231, 235, 512, 546, 555, 556
       ];
 
-      if (binarySearch.searchMaster(searchValue, searchArray) !== -1) {
-        console.log(searchValue + " array position is " + binarySearch.arrayPosition);
+      for (var i = 0; i < searchArray.length; i++) {
+        searchValue = searchArray[i];
+
+        var result = $moo(searchValue, searchArray);
+        result.hayType();
+
+        if (result.needleLocation !== -1) {
+          console.log("The array position of item " + searchValue + " is " + result.needleLocation);
+        }
+        else {
+          console.log("Item " + searchValue + " does not exist in this array");
+        }
+      } /**
+
+      var result = $moo(searchValue, searchArray);
+      result.hayType();
+
+      if (result.needleLocation !== -1) {
+        console.log("The array position of item " + searchValue + " is " + result.needleLocation);
       }
       else {
-        console.log(searchValue + " does not exist in this array");
-      }
+        console.log("Item " + searchValue + " does not exist in this array");
+      }**/
+
 
       </script>
 
